Fix Style Overflow

--- a/stylebook.css
+++ b/stylebook.css
@@ -1,8 +1,16 @@
-#pagebook, #semana{
+#semana{
     display: block;
     justify-content: center;
     align-items: center;
     align-content: center;
+}
+
+#pagebook{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 94%;
 }
 
 #DivSemanasBook{
@@ -258,7 +266,7 @@
     display: flex;
     flex-direction:row;
     padding: 0;
-
+    overflow-x: hidden;
 }
 
 #divButtons{
@@ -292,7 +300,7 @@
 }
 
 span, .buttonBook{
-    white-space: pre;
+    white-space: nowrap;
     overflow: hidden;  /* Esto asegura que el texto que no cabe no se muestre */
     text-overflow: ellipsis; /* Opcional: agrega "..." al final del texto si se desborda */
     display: block; /* Para asegurarte de que el span se muestre como un bloque inline */
@@ -337,10 +345,6 @@ span, .buttonBook{
 }
 
 @media (max-width: 1000px){
-
-    #pagebook{
-        width: 720px;
-    }
 
     .ButtonLabelBook{
         font-size: 0.96rem;
